--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,18 @@ code {
 .ui.vertical :not(.inverted) .segment {
   background: #eeeeee;
 }
+
+.footer{
+  position: absolute;
+  bottom: 0;
+  height: 10rem;
+}
+
+#page-container{
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 11rem;    /* Footer height */
+}
