scrolling text kinda works needs to be cleaned up

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,11 @@ code {
   height: 10rem;
 }
 
+.text-scroll{
+  animation: slide 2s infinite linear;
+  width: fit-content;
+}
+
 #page-container{
   position: relative;
   min-height: calc(100vh - 1rem);
@@ -46,7 +51,7 @@ code {
 }
 
 #bot-loading-icon{
-  animation: rotation 2s infinite linear;
+  animation: rotation 5s infinite linear;
 }
 
 #bot-status-icon{
@@ -59,6 +64,7 @@ code {
 
 #bot-card-div{
   max-width: 15em;
+  padding-bottom: 3em;
 }
 
 #desktop-bot-div{
@@ -72,4 +78,37 @@ code {
   to {
     transform: rotate(359deg);
   }
+}
+
+@keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+.ticker-wrap {
+  position: fixed;
+  overflow: hidden;
+  left: 5em;
+}
+
+.ticker {
+  display: inline-block;
+  white-space: nowrap;
+
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-name: ticker;
+  animation-name: ticker;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
 }
