--- a/src/index.css
+++ b/src/index.css
@@ -63,12 +63,11 @@ code {
 }
 
 #bot-card-div{
-  max-width: 15em;
-  padding-bottom: 3em;
+  padding-bottom: 3rem;
 }
 
 #desktop-bot-div{
-  padding-left: 1em;
+  padding-left: 1rem;
 }
 
 @keyframes rotation {
@@ -87,6 +86,12 @@ code {
     visibility: visible;
   }
 
+  20% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
   100% {
     -webkit-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
@@ -94,21 +99,28 @@ code {
 }
 
 .ticker-wrap {
-  position: fixed;
   overflow: hidden;
   left: 5em;
+  position: fixed;
+}
+
+.ticker-wrap.desktop{
+  width: calc(18.75% - 7.3rem);
+}
+
+.ticker-wrap.mobile{
+  position: relative;
+  left: -2rem;
 }
 
 .ticker {
   display: inline-block;
   white-space: nowrap;
-
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
   animation-timing-function: linear;
   -webkit-animation-name: ticker;
   animation-name: ticker;
-  -webkit-animation-duration: 2s;
-  animation-duration: 2s;
+
 }
