--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,11 @@ code {
     visibility: visible;
   }
 
+  90% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+
   100% {
     -webkit-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
