update to botstatus

--- a/src/css/discordBot.css
+++ b/src/css/discordBot.css
@@ -12,7 +12,7 @@ float: right;
 right: 0.8rem;
 bottom: 1.7rem;
 border-radius: 1em;
-border: solid black;
+border: solid #1b1c1d;
 height: .35em;
 width: .35em;
 border-width: .075em;
