--- a/src/css/discordBot.css
+++ b/src/css/discordBot.css
@@ -6,16 +6,21 @@
 
 .online-icon{
     background: green;
-font-size: 2em;
-position: relative;
-float: right;
-right: 0.8rem;
-bottom: 1.7rem;
-border-radius: 1em;
-border: solid #1b1c1d;
-height: .35em;
-width: .35em;
-border-width: .075em;
+    font-size: 2em;
+    position: relative;
+    float: right;
+    right: 0.8rem;
+    bottom: 1.7rem;
+    border-radius: 1em;
+    border: solid #fff;
+    border-width: .075em;
+    height: .35em;
+    width: .35em;
+}
+
+.online-icon.inverted{
+    border: solid #1b1c1d;
+    border-width: .075em;
 }
 
 .bot-card-div{
